# ClassroomTranscripter

./: .env.example  .gitignore  README.md  Requirements.txt  pyproject.toml  udemy_transcripts.py
docs/: Changelog.md  arquitetura.md  refactor-plan.md
docs/sources/: alura.md
src/classroom_transcripter/: __init__.py  __main__.py
src/classroom_transcripter/cli/: __init__.py  alura_cli.py  dio_cli.py  enrich_cli.py  main.py  setup_cli.py  udemy_cli.py
src/classroom_transcripter/core/: __init__.py  config.py  downloader.py  exceptions.py  models.py  platforms.py  utils.py  vtt.py
src/classroom_transcripter/core/enricher/: __init__.py  base.py  pipeline.py
src/classroom_transcripter/core/enricher/providers/: __init__.py  claude.py  gemini.py  groq.py  ollama.py
src/classroom_transcripter/core/formatters/: __init__.py  base.py  obsidian.py  txt.py
src/classroom_transcripter/sources/: __init__.py  base.py
src/classroom_transcripter/sources/alura/: __init__.py  client.py  parser.py  source.py
src/classroom_transcripter/sources/dio/: __init__.py  source.py  video_finder.py  whisper_engine.py
src/classroom_transcripter/sources/udemy/: __init__.py  client.py  parser.py  source.py
tests/: conftest.py  test_client.py  test_config.py  test_structure.py  test_utils.py  test_vtt.py  text_formatters.py
tests/cli/: test_alura_cli.py  test_dio_cli.py  test_enrich_cli.py  test_main_dispatcher.py  test_udemy_cli.py
tests/core/: test_config.py  test_downloader.py  test_enricher.py  test_formatters.py  test_models.py  test_platforms.py  test_utils.py  test_vtt.py
tests/sources/alura/: test_client.py  test_parser.py  test_source.py
tests/sources/dio/: test_source.py  test_video_finder.py  test_whisper_engine.py
tests/sources/udemy/: test_client.py  test_parser.py  test_source.py
udemy_transcripter/: __init__.py  cli.py  client.py  config.py  downloader.py  enricher.py  formatters.py  setup.py  utils.py
udemy_transcripter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
