[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udemy-transcripter"
version = "1.0.0"
description = "Extrai transcrições/legendas de cursos da Udemy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "João Victor Azevedo" }]

dependencies = [
    "curl_cffi>=0.7",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
udemy-transcripter = "udemy_transcripter.cli:main"

[tool.setuptools.packages.find]
include = ["udemy_transcripter*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]