[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classroom-transcripter"
version = "0.2.0"
description = "Extrai transcrições de cursos (Udemy, DIO, Alura) e transforma em material de estudo com IA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "João Victor Azevedo" }]
keywords = ["transcription", "udemy", "dio", "alura", "obsidian", "ai", "study"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # HTTP / scraping (Udemy + Alura)
    "curl-cffi>=0.7.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    # Config
    "python-dotenv>=1.0.0",
    # CLI
    "rich>=13.7.0",
    # VTT parser (Udemy + Alura)
    "webvtt-py>=0.5.0",
]

[project.optional-dependencies]
# Providers de IA — instala só o que usar
groq = ["groq>=0.11.0"]
gemini = ["google-generativeai>=0.8.0"]
claude = ["anthropic>=0.40.0"]
ollama = ["ollama>=0.3.0"]
ai-all = [
    "groq>=0.11.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.40.0",
    "ollama>=0.3.0",
]

# DIO — precisa de Whisper local
dio = [
    "openai-whisper>=20231117",
    "torch>=2.0.0",
    "ffmpeg-python>=0.2.0",
]

# Tudo
all = [
    "classroom-transcripter[ai-all,dio]",
]

# Dev
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.scripts]
# CLI umbrella + 3 CLIs específicos
classroom = "classroom_transcripter.cli.main:main"
classroom-udemy = "classroom_transcripter.cli.udemy_cli:main"
classroom-dio = "classroom_transcripter.cli.dio_cli:main"
classroom-alura = "classroom_transcripter.cli.alura_cli:main"
classroom-enrich = "classroom_transcripter.cli.enrich_cli:main"
classroom-setup = "classroom_transcripter.cli.setup_cli:main"

[project.urls]
Homepage = "https://github.com/JoaoAzevedo184/ClassroomTranscripter"
Issues = "https://github.com/JoaoAzevedo184/ClassroomTranscripter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
